[package]
name = "ghs_demangle"
version = "0.1.0"
edition = "2021"

authors = ["syoch <syoch64@gmail.com>"]
description = "A simple implementation GHS demangler"
license = "MIT/Apache-2.0"
repository = "https://github.com/syoch/ghs_demangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "7.1.1"
clap = "3.2.17"
once_cell = "1.13.1"
wasm-bindgen = "0.2.83"